--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MaterialComponents.NoActionBar">
+        <activity
+            android:windowSoftInputMode="adjustPan"
+            android:name=".views.home.fragments.messages.chat.ChatActivity"></activity>
         <activity android:name=".views.home.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
