--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,6 @@ dependencies {
 
     implementation 'com.airbnb.android:lottie:3.4.2'
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+
+    implementation 'com.github.angads25:toggle:1.1.0'
 }
